--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "expo": "^48.0.0",
+    "expo-keep-awake": "~12.0.1",
     "jotai": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
