--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "^48.0.0",
     "expo-keep-awake": "~12.0.1",
+    "expo-notifications": "~0.18.1",
     "jotai": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
