--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jotai": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-localize": "^3.0.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-restart": "^0.0.27",
     "react-native-root-toast": "^3.4.1",
