--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "e2e:build:ios": "detox build --configuration ios.sim.debug",
+    "e2e:build:android": "detox build --configuration android.emu.debug",
+    "e2e:test:ios": "detox test --configuration ios.sim.debug",
+    "e2e:test:android": "detox test --configuration android.emu.debug"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
@@ -33,20 +37,23 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.1",
+    "@types/detox": "^18.1.0",
+    "@types/jest": "^29.5.2",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "detox": "^20.9.1",
     "eslint": "^8.19.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-native": "^4.0.0",
+    "husky": "^8.0.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4",
-    "husky": "^8.0.0"
+    "typescript": "4.8.4"
   },
   "jest": {
     "preset": "react-native"
