--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "e2e:build:ios": "detox build --configuration ios.sim.debug",
     "e2e:build:android": "detox build --configuration android.emu.debug",
     "e2e:test:ios": "detox test --configuration ios.sim.debug",
-    "e2e:test:android": "detox test --configuration android.emu.debug"
+    "e2e:test:android": "detox test --configuration android.emu.debug",
+    "beta": "npm run lint && bundle exec fastlane ios beta"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
